change in name of teh project and adding classes that represents data objects

--- a/Warehouse/pom.xml
+++ b/Warehouse/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>Workshop</artifactId>
+	<artifactId>Warehouse</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Workshop</name>
 	<description>Workshop</description>
