--- a/Warehouse/.gitignore
+++ b/Warehouse/.gitignore
@@ -5,6 +5,7 @@ target/
 !**/src/test/**/target/
 .env
 .gitattributes
+!**/src/main/resources/application.properties
 ### STS ###
 .apt_generated
 .classpath
