--- a/Warehouse/src/test/resources/application.properties
+++ b/Warehouse/src/test/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
-spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
