--- a/Warehouse/src/main/resources/application.properties
+++ b/Warehouse/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.jpa.hibernate.naming.physical-strategy=${spring.jpa.hibernate.naming.physical-strategy}
+spring.jpa.hibernate.naming.physical-strategy=${SPRING_JPA_HIBERNATE_NAMING_PHYSICAL_STRATEGY}
